--- a/frontend/Properties/launchSettings.json
+++ b/frontend/Properties/launchSettings.json
@@ -3,17 +3,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:11693",
-      "sslPort": 44336
+      "applicationUrl": "http://localhost:15981",
+      "sslPort": 44322
     }
   },
   "profiles": {
-    "frontend": {
+    "Bos.Todo.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7265;http://localhost:5166",
+      "applicationUrl": "https://localhost:7069;http://localhost:5069",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
