Changed final images to ngnix

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,6 +17,6 @@ FROM build AS publish
 RUN dotnet publish "Bos.Todo.Web.csproj" -c Release -o /app/publish
 
 FROM nginx:alpine AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Bos.Todo.Web.dll"]
+WORKDIR /usr/share/nginx/html
+COPY --from=publish /app/publish/wwwroot .
+COPY nginx.conf /etc/nginx/nginx.conf
