Added db and container settings

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "CosmosDB": {
-    "AccountEndpoint": "",
-    "DatabaseName": "",
-    "ContainerName": "",
-    "Key": ""
+    "AccountEndpoint": "<url>",
+    "Key": "<key>",
+    "DatabaseName": "Todo",
+    "ContainerName": "Items"
   }
 }
