--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,20 @@
+version: '3'  # specify docker-compose version
+
 services:
   frontend:
     build: ./frontend
     ports:
-      - "80:5000"
+      - "8088:80"
     networks:
       - front-tier
       - back-tier
-    configs:
-      - httpd-config
+    #configs:
+    #  - httpd-config
 
   backend:
     build: ./backend
     ports:
-      - "80:8080"
+      - "5000:80"
     networks:
       - back-tier
 
