--- a/src/api/appsettings.json
+++ b/src/api/appsettings.json
@@ -5,11 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "CosmosDB": {
-    "AccountEndpoint": "<url>",
-    "Key": "<key>",
-    "DatabaseName": "Todo",
-    "ContainerName": "Items"
-  }
+  "AllowedHosts": "*"
 }
