--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["Bos.Todo.Api.csproj", "."]
-RUN dotnet restore "./Bos.Todo.Api.csproj"
+COPY ["Ponos.Api.csproj", "."]
+RUN dotnet restore "./Ponos.Api.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "Bos.Todo.Api.csproj" -c Release -o /app/build
+RUN dotnet build "Ponos.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Bos.Todo.Api.csproj" -c Release -o /app/publish
+RUN dotnet publish "Ponos.Api.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Bos.Todo.Api.dll"]
+ENTRYPOINT ["dotnet", "Ponos.Api.dll"]
